# astraflow

./: .dockerignore  .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_menu_metadata.py  0003_phase2_ai_workbench.py  0004_chat_reasoning_trace.py  0005_streaming_routes_rag.py
backend/app/: __init__.py  main.py
backend/app/ai/clients/: factory.py  http_agent_client.py
backend/app/ai/contracts/: client.py  schemas.py
backend/app/ai/gateway/: service.py
backend/app/ai/logging/: service.py
backend/app/ai/mock/: mock_agent.py
backend/app/ai/prompt_hub/: service.py
backend/app/ai/providers/: base.py  llm_provider.py  mcp_llm_gateway.py  mock.py  openai_compatible.py
backend/app/ai/retrieval/: __init__.py  base.py  noop.py  schemas.py
backend/app/ai/routing/: service.py
backend/app/ai/safety/: service.py
backend/app/apps/chat/: repository.py  router.py  schemas.py  service.py
backend/app/apps/learn/: router.py  schemas.py  service.py
backend/app/apps/placeholder/: router.py
backend/app/common/ai_admin/: router.py  service.py
backend/app/core/: cache.py  config.py  deps.py  errors.py  logging.py  middleware.py  pagination.py  responses.py  schemas.py  security.py  time_format.py
backend/app/db/: base.py  init_db.py  models.py  session.py
backend/app/jobs/: contracts.py
backend/app/services/: internal_auth.py
backend/app/tests/: test_auth.py  test_health.py  test_security_gate.py
(+130 files in other folders)
